# bump-bot

./: .coverage  .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: ci_check.py  toml_lint.py
src/: __init__.py  bot.py  config.py  constants.py  main.py  utils.py
src/cogs/: __init__.py  bump.py
src/database/: engine.py  models.py
src/services/: bump_service.py
tests/: test_bump_detection.py  test_smoke.py
tests/services/: test_bump_service.py
