[project]
name = "bump-bot"
version = "0.1.0"
description = "Discord bump reminder bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "discord.py~=2.6.0",
  "SQLAlchemy~=2.0.0",
  "pydantic-settings~=2.0",
  "asyncpg~=0.30.0",
  "greenlet~=3.0.0",
  "emoji~=2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.0",
  "pytest-cov~=4.0",
  "pytest-asyncio~=0.23",
  "mypy~=1.8",
  "ruff~=0.14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
